# diffviews

./: .gitignore  README.md  SPACES_README.md  app.py  modal_app.py  modal_gpu.py  modal_web.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
demo_data/activations/imagenet_real/: batch_000000.npz
demo_data/embeddings/: demo_embeddings.csv  demo_embeddings.pkl
demo_data/metadata/imagenet_real/: dataset_info.json
demo_data_edm/activations/imagenet_real/: batch_000000.npz
demo_data_edm/embeddings/: demo_embeddings.csv  demo_embeddings.json  demo_embeddings.pkl
demo_data_edm/metadata/imagenet_real/: dataset_info.json
diffviews/: __init__.py
diffviews/adapters/: __init__.py  base.py  dmd2_imagenet.py  edm_imagenet.py  hooks.py  nvidia_compat.py  registry.py
diffviews/core/: __init__.py  extractor.py  generator.py  masking.py
diffviews/data/: __init__.py  class_labels.py  cloud_adapter.py  imagenet64_class_labels.json  lmdb_utils.py  r2_cache.py  sources.py
diffviews/processing/: __init__.py  aligned_umap.py  umap.py  umap_backend.py
diffviews/scripts/: __init__.py  cli.py
diffviews/utils/: __init__.py  checkpoint.py  device.py
diffviews/visualization/: app.py  gpu_ops.py  gradio_app.py  layout.py  models.py  visualizer.py
docs/: ARCHITECTURE.md  TODO.md  auth-plan.md  edm-session-prompt.md  edm-support-plan.md  external_adapt-diff_plan.md  gradio-6-migration-plan.md  gradio-port-continuation-prompt.md  gradio-port-plan.md  modal-transition-continuation-prompt.md  modal-transition-plan.md  plan-adapt-diff-migration.md  plan-extraction-migration.md  plan-generation-migration.md  plan-on-demand-layer-umap-continuation-prompt.md  plan-on-demand-layer-umap.md  refactor-and-cuml-plan.md  refactor-continuation-prompt.md  regenerate-mscoco-4level.md
scripts/: check_layer_cache.py  convert_checkpoint.py  create_demo_subset.py  download_checkpoint.py  download_data.py  extract_activations.py  extract_mscoco_activations.py  seed_layer_cache.py  seed_r2.py
tests/: test_dmd2_adapter.py  test_generator.py  test_gradio_visualizer.py  test_masking.py  test_r2_cache.py  test_visualizer.py
